--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,6 @@
 baseURL = 'https://spanishgardensone.com/'
 languageCode = 'en-us'
-title = 'Spanish Gardsens I HOA'
+title = 'Spanish Gardens I HOA'
 paginate = 3
 theme = 'maverick'
 
@@ -10,7 +10,7 @@ theme = 'maverick'
 [params]
   logo = '/assets/favicon.ico'
   description = "A minimal hugo theme focus on content"
-  author = 'Calvin Tran'
+  author = 'Jeff Orshalick'
 
   [params.comments]
     enabled = false
