--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,8 +1,8 @@
 backend:
   name: github
-  repo: username/repo
+  repo: jefforshalick/spanishgardensone.com
   branch: main # Branch to update (optional; defaults to master)
-  base_url: https://example.com
+  base_url: https://spanishgardensone.com
   auth_endpoint: /api/auth
 media_folder: static/img
 public_folder: /img
