--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -3,7 +3,7 @@ backend:
   repo: jefforshalick/spanishgardensone.com
   branch: main # Branch to update (optional; defaults to master)
   base_url: https://spanishgardensone.com
-  auth_endpoint: /api/auth
+  auth_endpoint: /auth
 media_folder: static/img
 public_folder: /img
 collections:
