--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -7,9 +7,9 @@ backend:
 media_folder: static/img
 public_folder: /img
 collections:
-  - name: 'blog'
-    label: 'Blog'
-    folder: 'content/blog'
+  - name: 'posts'
+    label: 'Posts'
+    folder: 'content/posts'
     create: true
     slug: '{{slug}}'
     editor:
