--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -17,5 +17,5 @@ collections:
     fields:
       - { label: 'Title', name: 'title', widget: 'string' }
       - { label: 'Publish Date', name: 'date', widget: 'datetime' }
-      - { label: 'Tag', name: 'tag', widget: 'string' }
+      # - { label: 'Tag', name: 'tag', widget: 'string' }
       - { label: 'Body', name: 'body', widget: 'markdown' }
