--- a/hugo.toml
+++ b/hugo.toml
@@ -9,7 +9,7 @@ theme = 'maverick'
 
 [params]
   logo = '/assets/favicon.ico'
-  description = "A minimal hugo theme focus on content"
+  description = "Welcome to Spanish Gardens I Association"
   author = 'Jeff Orshalick'
 
   [params.comments]
