Adds other pages to decap CMS

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,7 +1,10 @@
 baseURL = 'https://spanishgardensone.com/'
 languageCode = 'en-us'
 title = 'Spanish Gardens I Association'
-paginate = 3
+
+[pagination]
+  pagerSize = 3
+
 theme = 'maverick'
 
 [permalinks]
