--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -29,3 +29,4 @@ collections:
     fields:
       - { label: 'Title', name: 'title', widget: 'string' }
       - { label: 'URL', name: 'url', widget: 'string' }
+      - { label: 'Description', name: 'description', widget: 'text' }
